--- a/config
+++ b/config
@@ -1,27 +1,27 @@
 #!/usr/bin/env bash
 _DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-export ELASTICSEARCH_IMAGE=${ELASTICSEARCH_IMAGE:="$(awk -F '[ :]' '{print $2}' "${_DIR}/Dockerfile")"}
-export ELASTICSEARCH_IMAGE_VERSION=${ELASTICSEARCH_IMAGE_VERSION:="$(awk -F '[ :]' '{print $3}' "${_DIR}/Dockerfile")"}
-export ELASTICSEARCH_ROOT=${ELASTICSEARCH_ROOT:="$DOKKU_LIB_ROOT/services/elasticsearch"}
+export OPENSEARCH_IMAGE=${OPENSEARCH_IMAGE:="$(awk -F '[ :]' '{print $2}' "${_DIR}/Dockerfile")"}
+export OPENSEARCH_IMAGE_VERSION=${OPENSEARCH_IMAGE_VERSION:="$(awk -F '[ :]' '{print $3}' "${_DIR}/Dockerfile")"}
+export OPENSEARCH_ROOT=${OPENSEARCH_ROOT:="$DOKKU_LIB_ROOT/services/opensearch"}
 export DOKKU_LIB_HOST_ROOT=${DOKKU_LIB_HOST_ROOT:=$DOKKU_LIB_ROOT}
-export ELASTICSEARCH_HOST_ROOT=${ELASTICSEARCH_HOST_ROOT:="$DOKKU_LIB_HOST_ROOT/services/elasticsearch"}
+export OPENSEARCH_HOST_ROOT=${OPENSEARCH_HOST_ROOT:="$DOKKU_LIB_HOST_ROOT/services/opensearch"}
 
 export PLUGIN_UNIMPLEMENTED_SUBCOMMANDS=("backup" "backup-auth" "backup-deauth" "backup-schedule" "backup-schedule-cat" "backup-set-encryption" "backup-unschedule" "backup-unset-encryption" "clone" "connect" "export" "import")
-export PLUGIN_COMMAND_PREFIX="elasticsearch"
+export PLUGIN_COMMAND_PREFIX="opensearch"
 export PLUGIN_CONFIG_ROOT=${PLUGIN_CONFIG_ROOT:="$DOKKU_LIB_ROOT/config/$PLUGIN_COMMAND_PREFIX"}
-export PLUGIN_DATA_ROOT=$ELASTICSEARCH_ROOT
-export PLUGIN_DATA_HOST_ROOT=$ELASTICSEARCH_HOST_ROOT
+export PLUGIN_DATA_ROOT=$OPENSEARCH_ROOT
+export PLUGIN_DATA_HOST_ROOT=$OPENSEARCH_HOST_ROOT
 export PLUGIN_DATASTORE_PORTS=(9200 9300)
 export PLUGIN_DATASTORE_WAIT_PORT=9200
-export PLUGIN_DEFAULT_ALIAS="ELASTICSEARCH"
-export PLUGIN_DISABLE_PULL=${ELASTICSEARCH_DISABLE_PULL:=}
-export PLUGIN_DISABLE_PULL_VARIABLE="ELASTICSEARCH_DISABLE_PULL"
-export PLUGIN_ALT_ALIAS="DOKKU_ELASTICSEARCH"
-export PLUGIN_IMAGE=$ELASTICSEARCH_IMAGE
-export PLUGIN_IMAGE_VERSION=$ELASTICSEARCH_IMAGE_VERSION
+export PLUGIN_DEFAULT_ALIAS="OPENSEARCH"
+export PLUGIN_DISABLE_PULL=${OPENSEARCH_DISABLE_PULL:=}
+export PLUGIN_DISABLE_PULL_VARIABLE="OPENSEARCH_DISABLE_PULL"
+export PLUGIN_ALT_ALIAS="DOKKU_OPENSEARCH"
+export PLUGIN_IMAGE=$OPENSEARCH_IMAGE
+export PLUGIN_IMAGE_VERSION=$OPENSEARCH_IMAGE_VERSION
 export PLUGIN_SCHEME="http"
-export PLUGIN_SERVICE="Elasticsearch"
-export PLUGIN_VARIABLE="ELASTICSEARCH"
+export PLUGIN_SERVICE="OpenSearch"
+export PLUGIN_VARIABLE="OPENSEARCH"
 export PLUGIN_BASE_PATH="$PLUGIN_PATH"
 export PLUGIN_CONFIG_SUFFIX="config"
 if [[ -n $DOKKU_API_VERSION ]]; then
@@ -33,4 +33,4 @@ export PLUGIN_AMBASSADOR_IMAGE=${PLUGIN_AMBASSADOR_IMAGE:=dokku/ambassador:0.8.2
 export PLUGIN_S3BACKUP_IMAGE=${PLUGIN_S3BACKUP_IMAGE:=dokku/s3backup:0.18.0}
 export PLUGIN_WAIT_IMAGE=${PLUGIN_WAIT_IMAGE:=dokku/wait:0.9.3}
 
-export ELASTICSEARCH_CONFIG_OPTIONS=${ELASTICSEARCH_CONFIG_OPTIONS:=""}
+export OPENSEARCH_CONFIG_OPTIONS=${OPENSEARCH_CONFIG_OPTIONS:=""}
